@@ -73,8 +73,10 @@ inline void syx_exec_state_free (void);
 
 //! Enter the method which contains the primitive call
 #define SYX_PRIM_FAIL							\
+  syx_memory_gc_begin ();						\
   syx_interp_enter_context (syx_method_context_new (es->context, method, es->message_receiver, \
 						    syx_array_new_ref (es->message_arguments_count, es->message_arguments))); \
+  syx_memory_gc_end ();							\
   return FALSE
 
 //! Assert the number of minimum number of arguments given. Call SYX_PRIM_FAIL if assert fails
