@@ -1,3 +1,9 @@
+2007-08-01  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-interp.c (syx_process_execute_blocking): save/restore the active process when running blocking processes
+
+	* syx/syx-interp.h (SYX_PRIM_FAIL): add the arguments array to the GC transaction
+
 2007-07-30  Luca Bruno  <lethalman88@gmail.com>
 
 	== Released 0.1.3 version ==
